fix: big picture, h-scroll because of dev-css-property
specify higher resolutions for my cards in the array (they were
prepared from the very beginning)
remove the horizontal scroll due to the technical boundaries of the
document (not 1280px, but 1282px)

--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -16,6 +16,8 @@
   text-rendering: optimizeLegibility;
 
   /* Отладочные свойства */
-  border: 1px red dashed;
+  /* border: 1px red dashed;
+  max-width: 1282px;
+  box-sizing: border-box; */
   /* background-color: #d89292; */
 }
